
    The Portuguese decree of 1911-05-25 took effect on 1912-01-01.
    This affects 1911 time stamps in Africa/Bissau, Africa/Luanda,
    Atlantic/Azores, and Atlantic/Madeira.  Also, Lisbon's pre-1912
    GMT offset was -0:36:45 (rounded from -0:36:44.68), not -0:36:32.
    (Thanks to Stephen Colebourne for pointing to the decree.)

    Asia/Dakha ended DST on 2009-12-31 at 24:00, not 23:59.

  Changes affecting documentation and commentary

    tz-link.htm describes Windows Runtime etc.  (Thanks to Matt Johnson.)


Release 2014f - 2014-08-05 17:42:36 -0700

  Changes affecting future time stamps

    Russia will subtract an hour from most of its time zones on 2014-10-26
    at 02:00 local time.  (Thanks to Alexander Krivenyshev.)
    There are a few exceptions: Magadan Oblast (Asia/Magadan) and Zabaykalsky
    Krai are subtracting two hours; conversely, Chukotka Autonomous Okrug
    (Asia/Anadyr), Kamchatka Krai (Asia/Kamchatka), Kemerovo Oblast
    (Asia/Novokuznetsk), and the Samara Oblast and the Udmurt Republic
    (Europe/Samara) are not changing their clocks.  The changed zones are
    Europe/Kaliningrad, Europe/Moscow, Europe/Simferopol, Europe/Volgograd,
    Asia/Yekaterinburg, Asia/Omsk, Asia/Novosibirsk, Asia/Krasnoyarsk,
    Asia/Irkutsk, Asia/Yakutsk, Asia/Vladivostok, Asia/Khandyga,
    Asia/Sakhalin, and Asia/Ust-Nera; Asia/Magadan will have two hours
    subtracted; and Asia/Novokuznetsk's time zone abbreviation is affected,
    but not its UTC offset.  Two zones are added: Asia/Chita (split
    from Asia/Yakutsk, and also with two hours subtracted) and
    Asia/Srednekolymsk (split from Asia/Magadan, but with only one hour
    subtracted).  (Thanks to Tim Parenti for much of the above.)

  Changes affecting time zone abbreviations

    Australian eastern time zone abbreviations are now AEST/AEDT not EST,
    and similarly for the other Australian zones.  That is, for eastern